- implemented autodeployment - only allow cookie-mode for jsession