@@ -32,6 +32,12 @@
     <jdbc.username>welovecoding</jdbc.username>
     <jdbc.password>123456</jdbc.password>
     <sql.driver.version>5.1.29</sql.driver.version>
+    
+    <gf.remote.adress>0.0.0.0</gf.remote.adress>
+    <gf.remote.port>4848</gf.remote.port>
+    <gf.remote.username>admin</gf.remote.username>
+    <gf.remote.password>password</gf.remote.password>
+    <gf.remote.deployable.type>war</gf.remote.deployable.type>
   </properties>
   
   <repositories>
@@ -61,6 +67,10 @@
         <enabled>true</enabled>
         <!--<updatePolicy>always</updatePolicy>-->
       </snapshots>
+    </repository>
+    <repository>
+      <id>glassfish</id>
+      <url>http://download.java.net/maven/glassfish</url>
     </repository>
   </repositories>
     
@@ -200,6 +210,14 @@
     </dependency>
   </dependencies>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>glassfish</id>
+      <url>http://download.java.net/maven/glassfish</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+
   <build>
     <plugins>
       <plugin>
@@ -324,5 +342,56 @@
       </plugin>
     </plugins>
   </build>
+  
+  <profiles>
+    <profile>
+      <id>production</id>
+      <properties>
+        <!-- Override properties here -->
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven2-plugin</artifactId>
+            <version>1.4.7</version>
+            <configuration>
+              <container>
+                <containerId>glassfish4x</containerId>
+                <type>remote</type>
+                <!--<timeout>300000</timeout>  2 minutes -->
+              </container>
+              <configuration>
+                <type>runtime</type>
+                <properties>
+                  <cargo.hostname>${gf.remote.adress}</cargo.hostname>
+                  <cargo.remote.username>${gf.remote.username}</cargo.remote.username>
+                  <cargo.remote.password>${gf.remote.password}</cargo.remote.password>
+                  <cargo.remote.port>${gf.remote.port}</cargo.remote.port>
+                  <cargo.glassfish.domain.name>/domain1</cargo.glassfish.domain.name>
+                  <!--<cargo.jvmargs>-XX:MaxPermSize=256M -Xmx512m</cargo.jvmargs>-->
+                  <cargo.jvmargs>-XX:PermSize=512m -XX:MaxPermSize=1024 -XX:+UseConcMarkSweepGC -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled</cargo.jvmargs>
+                </properties>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <type>${gf.remote.deployable.type}</type>
+                </deployable>
+              </deployables>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.glassfish.main.deployment</groupId>
+                <artifactId>deployment-client</artifactId>
+                <version>4.0</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
    
 </project>
